himesama ids are now attributed to every element

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href='./style.css' ></link> -->
   </head>
   <body>
-    <div id = 'content' himesama-id = '.0' ></div>
+    <div id = 'mount' ></div>
     <script src = './app.js'></script>
   </body>
 </html>
